part1/1.07/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: randomstring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: randomstring
  template:
    metadata:
      labels:
        app: randomstring
    spec:
      containers:
        - name: random
          image: epylkkan/training_kubernetes_devops:107random
