part1/1.07/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: randomstring-app
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: randomstring-svc
          servicePort: 2345
